--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500&family=Open+Sans:wght@400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;500;800&family=Open+Sans:wght@400;500;700;800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,5 +6,5 @@ body{
   font-family: 'Open Sans', sans-serif;
 }
 h1,h2,h3,h4,h5,h6,a{
-  font-family: 'EB Garamond', serif;
+  font-family: 'Merriweather Sans', sans-serif;
 }
