--- a/src/component/HomeComponents/HomeComponents.css
+++ b/src/component/HomeComponents/HomeComponents.css
@@ -4,7 +4,7 @@
 }
 
 .hero-img{
-    background-image: url("https://images.unsplash.com/photo-1621691553102-66d4ecdb1be2?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1920&q=80");
+    background-image: url("https://i.ibb.co/9TSRYX6/hero-img.jpg");
     height:88vh ;
     background-repeat: no-repeat;
     background-size: contain;
